# NLP-stigma-analysis

./: .gitignore  Home.py  data.py  filters.py  pyproject.toml
.streamlit/: secrets.toml.example
analyses/main/: discourse.py  emotion_residual.py  emotion_speak.py  inconsistency.py  speaker_real.py  speakertype_residual.py  tweet_samples.py  variance.py
analyses/supl/: _variance.py  four_way.py  nc_bucket.py  nlp_text.py  real_gate.py  sent_emotion.py  sentiment_residual.py  stigma_proxy.py
pages/: 1_Main.py  2_Supplementary.py
